--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   <p>© 2025 EL CHISME. Todos los derechos reservados.</p>
   <div class="redes">
     <a href="https://www.linkedin.com/in/jazmin-cantero" target="_blank">LinkedIn</a> |
-    <a href="https://github.com/jazmin-cantero" target="_blank">GitHub</a> |
+    <a href="https://github.com/JazminCantero/Portafolio/tree/JazminCantero" target="_blank">GitHub</a> |
     <a href="https://twitter.com/jazmin_cantero" target="_blank">Twitter</a>
   </div>
 </footer>
