--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 <footer>
   <p>© 2025 EL CHISME. Todos los derechos reservados.</p>
   <div class="redes">
-    <a href="https://www.linkedin.com/in/jazmin-cantero" target="_blank">LinkedIn</a> |
+    <a href="https://trello.com/invite/b/68759844e3d740f8aaf7ae18/ATTI74aff5637dc7e3c08ce84e63637325e183393833/sitioweb" target="_blank">Trello</a> |
     <a href="https://github.com/JazminCantero/Portafolio/tree/JazminCantero" target="_blank">GitHub</a> |
     <a href="https://twitter.com/jazmin_cantero" target="_blank">Twitter</a>
   </div>
